devops/base/reggie/deploy-web.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: reggie-web
  annotations:
    description: Route for reggies Web front end
  labels:
    app: reggie
    component: web
spec:
  port:
    targetPort: 2015-tcp
  to:
    kind: Service 
    name: reggie-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reggie
    component: web
  name: reggie-web
spec:
  selector:
    app: reggie
    component: web
  ports:
    - name: 2015-tcp
      port: 2015
      protocol: TCP
      targetPort: 2015
---
    apiVersion: apps/v1
    kind: Deployment
    metadata:
      labels:
        app: reggie
        component: web
      name: reggie-web
    spec:
      strategy:
        type: RollingUpdate
      replicas: 1
      selector:
        matchLabels:
          app: reggie
          role: web
      template:
        metadata:
          labels:
            app: reggie
            component: web
            role: web
          name: reggie
        spec:
          containers:
            - name: reggie-web
              image: image-registry.openshift-image-registry.svc:5000/6e2f55-tools/reggie-web:latest
              startupProbe:
                httpGet:
                  path: /
                  port: 2015
                failureThreshold: 11
                periodSeconds: 3
              readinessProbe:
                httpGet:
                  path: /
                  port: 2015
                timeoutSeconds: 3
              ports:
                - containerPort: 2015
              envFrom: 
                - configMapRef:
                    name: reggie-web-env
              resources:
                limits:
                  cpu: 50m
                  memory: 128Mi
                requests:
                  cpu: 20m
                  memory: 64Mi
              volumeMounts:
                - name: config-vol
                  mountPath: /opt/app-root/etc/Caddyfile
                  subPath: Caddyfile
          volumes:
            - name: config-vol
              configMap:
                name: reggie-web-caddy-config
